# dust-hackathon

./: .env  .gitignore  README.md  command_to_build  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirement.txt  run$  tailwind.config.ts  vite.config.ts
backend/: .env  README.md  chatgpt_parser.py  conversation_logger.py  generated_form_test_session_demo.json  prompts.py  requirements.txt  server.py  start.py  test_workflow.py
backend/analysis/: test_session_demo_analysis.txt
public/: debug-api.html  openai-realtime-sdk.js
server/: analyze-dashboard-server.mjs
src/: App.tsx  index.css  main.tsx
src/Christopher/: assistantService.ts  bento.py  bento_service.py  chartGenerator.ts  questionAnalyzer.ts  retrieve_supabase2.py
src/Nikita/: README.md  assistantService.ts
src/Victor/: assistantService.ts
src/components/: AdminPanel.tsx  AppHeader.tsx  AuthWrapper.tsx  CodeEntry.tsx  DummyJSONEditor.tsx  FloatingNav.tsx  FormBuilder.tsx  FormDataViewer.tsx  FormPreview.tsx  FormsGrid.tsx  HeroSection.tsx  LoginCard.tsx  MinimalFormsPreview.tsx  PublicFormView.tsx  SimpleLogin.tsx  VoiceAssistant.tsx
src/contexts/: AuthContext.tsx  SimpleAuthContext.tsx
src/hooks/: useAuth.ts  useSimpleAuth.ts
src/lib/: download.ts  mock.ts  toVegaLite.ts
src/pages/: AiChartsBento.tsx  Auth.tsx  FormDashboard.tsx  Index.tsx  NotFound.tsx  PublicForm.tsx
src/types/: ChartSpec.ts
supabase/: config.toml
supabase/migrations/: 20250927105117_01021c68-3e4d-405e-be20-d50f4ec42f41.sql  20250927105306_639e5c84-b1e2-4dba-89ac-542c6a1ce95f.sql  (+14 more)
(+51 files in other folders)
