[project]
name = "scribe-form"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "jinja2>=3.1.0",
    "numpy>=1.24.0",
    "openai>=1.109.1",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "requests>=2.32.5",
    "scipy>=1.11.0",
    "supabase>=2.0.0",
    "uvicorn>=0.24.0",
]
